fix issues and add tests